--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@
 *.dylib
 
 # Executables
-*.exe
 *.out
 *.app
 *.i*86
@@ -50,3 +49,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# local
+code*
+chickenfix.bin
